# smart-convergent-video

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindFFmpeg.cmake
src/: main.cpp  runner.cpp  runner.h
